test/libsolidity/syntaxTests/nameAndTypeResolution/570_function_type_undeclared_type.sol
contract C {
    function a(function(Nested)) external pure {}
}
// ----
// DeclarationError 7920: (37-43='Nested'): Identifier not found or not unique.
